force-app/main/default/objects/SmartIntake_File_Config__mdt/SmartIntake_File_Config__mdt.object-meta.xml
<CustomObject>
    <label>SmartIntake File Config</label>
    <pluralLabel>SmartIntake File Configs</pluralLabel>
</CustomObject>