force-app/main/default/objects/SmartIntake_File_Config__mdt/fields/Accepted_File_Types__c.field-meta.xml
<CustomField>
    <fullName>Accepted_File_Types__c</fullName>
    <description>Comma-separated list of accepted extensions or MIME types, such as .pdf,.png,image/jpeg.</description>
    <label>Accepted File Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>