force-app/main/default/objects/SmartIntake_File_Config__mdt/fields/Allow_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Multiple</label>
    <type>Checkbox</type>
</CustomField>