force-app/main/default/objects/SmartIntake_File_Config__mdt/fields/File_Config_Key__c.field-meta.xml
<CustomField>
    <fullName>File_Config_Key__c</fullName>
    <label>File Config Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>