force-app/main/default/objects/SmartIntake_File_Config__mdt/fields/Link_To_Final_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Final_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When enabled, uploaded files are linked to the final SmartIntake record after final save.</description>
    <label>Link To Final Record</label>
    <type>Checkbox</type>
</CustomField>