force-app/main/default/objects/SmartIntake_File_Config__mdt/fields/Max_File_Count__c.field-meta.xml
<CustomField>
    <fullName>Max_File_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Max File Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>