force-app/main/default/objects/SmartIntake_File_Config__mdt/fields/Share_Type__c.field-meta.xml
<CustomField>
    <fullName>Share_Type__c</fullName>
    <description>ContentDocumentLink share type. Supported values: V, C, I.</description>
    <label>Share Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>