force-app/main/default/objects/SmartIntake_File_Config__mdt/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>ContentDocumentLink visibility. Supported values: AllUsers, InternalUsers, SharedUsers.</description>
    <label>Visibility</label>
    <length>40</length>
    <type>Text</type>
</CustomField>